spring-boot-h2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h2-deployment
  labels:
    app: h2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: h2
  template:
    metadata:
      labels:
        app: h2
    spec:
      containers:
      - name: h2
        imagePullPolicy: Always
        image: quay.io/tsrana/spring-boot-h2:latest
        ports:
        - containerPort: 8080
