spring-boot-h2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2-service
spec:
  selector:
    app: h2
  type: NodePort
  ports:
   - port: 8080
     # nodePort: <31514>
